--- a/hackathon/pubspec.yaml
+++ b/hackathon/pubspec.yaml
@@ -71,6 +71,9 @@ flutter:
   assets:
       - assets/v5.png
       - assets/back.PNG
+      - assets/trash.png
+      - assets/utensils.png
+      - assets/image1.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
