--- a/hackathon/pubspec.yaml
+++ b/hackathon/pubspec.yaml
@@ -70,6 +70,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
       - assets/v5.png
+      - assets/logo_v5_2.png
+      - assets/logo_v53.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
