--- a/hackathon/pubspec.yaml
+++ b/hackathon/pubspec.yaml
@@ -76,6 +76,7 @@ flutter:
       - assets/trash.png
       - assets/utensils.png
       - assets/image1.png
+      - assets/bytesize_location.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
